Correct heading button of FAQ style The 'titles' were too small

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -313,8 +313,17 @@ button.accordion-button:focus {
     color: #c26c51;
 }
 
+.accordion-button {
+    font-size: 1.4rem;
+}
+
 .map {
-    width: 90%;
+    height: 400px;
+}
+
+.map iframe {
+    max-height: 100%;
+
 }
 
 /* Contact Form */
